In the current code, gpg-agent keeps a pipe connection to scdaemon and scdaemon keeps running.
When gpg-agent close the pipe connection, scdaemon should not accept socket connection any more and shutdown->finish.
Description
Description
Revisions and Commits
Revisions and Commits
| rG GnuPG | |||
| rGe94f793ebf8b Fix the previous commit. | |||
| rG9bc3f2ad52ce Fix the previous commit. | |||
| Status | Assigned | Task | ||
|---|---|---|---|---|
| Resolved | • gniibe | T7151 graceful shutdown: DEVINFO should be a gpg-agent command: also watching input close | ||
| Resolved | • gniibe | T7160 scd: pipe server shutdown |